sumo/tests/sumo/errors/meandata_edges_missing_begin1/Makefile.am
EXTRA_DIST =  aggregated15.sumo.exe aggregated300.sumo.exe \
aggregated60.sumo.exe aggregated900.sumo.exe cross3ltl.sumo.cfg \
errors.sumo.exe input_routes.rou.xml net.net.xml options.sumo \
output.sumo.exe

